// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should successfully create a legend component 1`] = `
<div
  class="legend css-0"
  data-testid="legend"
  data-theme="light"
>
  <ul
    class="legend-layer-list css-bhb3xr"
    data-theme="light"
    role="list"
  />
</div>
`;

exports[`should successfully show legend for Component configuration 1`] = `
<div
  class="legend css-0"
  data-testid="legend"
  data-theme="light"
>
  <ul
    class="legend-layer-list css-bhb3xr"
    data-theme="light"
    role="list"
  >
    <li
      class="legend-item layer-layer-1 css-0"
      data-theme="light"
    >
      <div
        class="css-0"
        data-theme="light"
      >
        <p
          class="chakra-text css-0"
          data-theme="light"
        >
          Layer 1
        </p>
        <div
          class="css-0"
          data-theme="light"
          style="height: 25px; width: 25px; border-color: #4cb3ff; border-width: 3px; border-radius: 50%; display: inline-block;"
        />
      </div>
    </li>
  </ul>
</div>
`;

exports[`should successfully show legend for imageUrl configuration 1`] = `
<div
  class="legend css-0"
  data-testid="legend"
  data-theme="light"
>
  <ul
    class="legend-layer-list css-bhb3xr"
    data-theme="light"
    role="list"
  >
    <li
      class="legend-item layer-layer-1 css-0"
      data-theme="light"
    >
      <div
        class="css-0"
        data-theme="light"
      >
        <p
          class="chakra-text css-0"
          data-theme="light"
        >
          Layer 1
        </p>
        <img
          alt="altLabel"
          class="legend-item__image css-12ffw4m"
          data-theme="light"
          src="https://avatars.githubusercontent.com/u/121286957?s=200&v=4"
        />
      </div>
    </li>
  </ul>
</div>
`;

exports[`shows legend entries for nested sublayers 1`] = `
<div
  class="legend css-0"
  data-testid="legend"
  data-theme="light"
>
  <ul
    class="legend-layer-list css-bhb3xr"
    data-theme="light"
    role="list"
  >
    <li
      class="legend-item layer-4fe37aeb-9a1a-4832-a1c0-ede818aaf340 css-0"
      data-theme="light"
    >
      <div
        class="css-0"
        data-theme="light"
      >
        <p
          class="chakra-text css-0"
          data-theme="light"
        >
          Sublayer 4.1
        </p>
        <img
          alt="altLabel"
          class="legend-item__image css-12ffw4m"
          data-theme="light"
          src="https://fake.legend.url/sublayer4_1.png"
        />
      </div>
    </li>
    <li
      class="legend-item layer-c8e4eba9-9183-4318-8c6e-5e7994006d01 css-0"
      data-theme="light"
    >
      <div
        class="css-0"
        data-theme="light"
      >
        <p
          class="chakra-text css-0"
          data-theme="light"
        >
          Sublayer 4.2
        </p>
        <img
          alt="altLabel"
          class="legend-item__image css-12ffw4m"
          data-theme="light"
          src="https://fake.legend.url/sublayer4_2.png"
        />
      </div>
    </li>
    <li
      class="legend-item layer-2b2aa59d-6a9a-45ff-9731-f41646324ae0 css-0"
      data-theme="light"
    >
      <div
        class="css-0"
        data-theme="light"
      >
        <p
          class="chakra-text css-0"
          data-theme="light"
        >
          Sublayer 3.2
        </p>
        <img
          alt="altLabel"
          class="legend-item__image css-12ffw4m"
          data-theme="light"
          src="https://fake.legend.url/sublayer3_2.png"
        />
      </div>
    </li>
    <li
      class="legend-item layer-ba9dc9d5-1c70-4cb7-8718-afab08c77495 css-0"
      data-theme="light"
    >
      <div
        class="css-0"
        data-theme="light"
      >
        <p
          class="chakra-text css-0"
          data-theme="light"
        >
          Sublayer 4.3
        </p>
        <img
          alt="altLabel"
          class="legend-item__image css-12ffw4m"
          data-theme="light"
          src="https://fake.wms.url/service?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetLegendGraphic&FORMAT=image%2Fpng&SCALE=545978.7734655447&LAYERS=sublayer4_4%2Csublayer4_3%2Csublayer4_2%2Csublayer4_1&LAYER=sublayer4_3"
        />
      </div>
    </li>
    <li
      class="legend-item layer-75f9cbed-332c-445b-9842-a6bbd465b779 css-0"
      data-theme="light"
    />
  </ul>
</div>
`;
